# mcp-core

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  package.json  semantic-release.toml
.Jules/: palette.md
.github/workflows/: cd.yml  ci.yml  e2e-t0.yml  publish.yml
.jules/: bolt.md  palette.md  sentinel.md
docs/: migration-from-mcp-relay-core.md
scripts/e2e/: .skret.yaml  bootstrap_skret.sh  client_runner.py  compose_renderer.py  driver.py  matrix.yaml  oauth_client.py  ports.py  pyproject.toml  relay_filler.py  skret_loader.py  user_gate.py
scripts/e2e/templates/: compose-crg.yml.j2  compose-email.yml.j2  compose-godot.yml.j2  compose-imagine.yml.j2  compose-mnemo.yml.j2  compose-notion.yml.j2  compose-telegram.yml.j2  compose-wet.yml.j2
scripts/e2e/tests/: test_compose_renderer.py  test_driver_hardening.py  test_matrix.py  test_oauth_client_hardening.py  test_ports.py  test_relay_filler.py  test_skret_loader.py
