[project]
name = "mcp-e2e-driver"
version = "0.1.0"
requires-python = "==3.13.*"
description = "E2E test driver for the MCP server stack (mcp-core + 8 MCPs)"
dependencies = [
    "httpx>=0.28.1",
    # botocore[crt] required so boto3 can use the ``aws login`` credential
    # provider on hosts authenticated via SSO/identity center. Without crt
    # SSM client raises MissingDependencyException at first call.
    "boto3>=1.42.97",
    "botocore[crt]>=1.42.97",
    "pyyaml>=6.0.3",
    "jinja2>=3.1.6",
    "mcp>=1.27.0",
    "starlette>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
    "respx>=0.23.1",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-v"
pythonpath = [".."]
